# axo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  activex_db.yml  axo-endpoint.yml  build_local.sh  deploy_endpoint.sh  deploy_opentelemetry.sh  deploy_storage.sh  init_peers.sh  mictlanx-p1.yml  mictlanx-simple.yml  mictlanx.yml  peers_status.sh  pull_request_template.md  pyproject.toml  requirements.txt  run_mictlanx.sh  storage.yml  test.sh
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature-request.yml  3-task.yml
.github/workflows/: axo.yml  run_test.yml
activex/: __init__.py  decorators.py  v1.py
activex/contextmanager/: __init__.py  contextmanager.py
activex/database/: connection.py
activex/endpoint/: __init__.py  endpoint.py
activex/handler/: __init__.py  handler.py
activex/import_manager/: __init__.py
activex/middleware/: __init__.py  main.py  middleware.py
activex/polymorphisim/: __init__.py
activex/polyymorphism/: __init__.py
activex/runtime/: __init__.py  distributed.py  local.py  runtime.py
activex/scheduler/: __init__.py  scheduler.py
activex/storage/: data.py  metadata.py
activex/utils/: __init__.py  files.py  serialization.py
axo/: __init__.py
axo/contextmanager/: __init__.py  contextmanager.py
axo/core/: __init__.py  axo.py
axo/endpoint/: __init__.py  endpoint.py  manager.py
axo/enums/: __init__.py
axo/environment/: __init__.py
axo/errors/: __init__.py
axo/helpers/: __init__.py
axo/import_manager/: __init__.py
axo/lock/: __init__.py
axo/log/: __init__.py
axo/models/: __init__.py
axo/polymorphisim/: __init__.py
axo/protocols/: __init__.py
axo/runtime/: __init__.py  core.py  distributed.py  local.py  runtime.py
axo/scheduler/: __init__.py  scheduler.py
axo/serde/: __init__.py
axo/storage/: __init__.py  data.py  (+5 more)
benchmark/: bm1.py
examples/: .env  01_calculator.py  01_put_calculator.py  02_get_calculator.py  03_perceptron.py  04_heatmap_put.py  05_heatmap_get.py  06_homomorphic_encryption.py  07_ida.py  08_fast_ida.py  09_splitter.py  10_patterns.py  11_identity_filter.py  mw_example.py
opentelemetry/: docker-compose.yml
pems/: cert.pem  key.pem
tests/: 01_basics.py  activex.py  activex_test.py  parse_logs.sh  test.md  test_ao.py  test_axo.py  test_axo_object_blobs.py  test_axo_storage_local.py  test_axo_storage_memory.py  test_axo_storage_mictlanx.py  test_basics.py  test_choreography.py  test_context_manager.py  test_endpoint.py  test_helpers.py  test_in_memory_loader.py  test_local_loader.py  test_local_storage_service.py  test_log.py  test_mictlanx_loader.py  test_mictlanx_storage_service.py  test_models.py  test_optimization.py  test_ref_pointer.py  test_runtime.py  test_scheduler.py  test_storage_service.py  test_task_manager.py
(+42 files in other folders)
